# einstein

./: CMakeLists.txt  LICENSE  README.md  einstein.py
python/: einstein.py
src/: blocks.cpp  blocks.hpp  ea.cpp  ea.hpp  einstein.cpp
